[gd_scene load_steps=3 format=3 uid="uid://cm3dbv3yqrayn"]

[ext_resource type="Script" path="res://UI/main.gd" id="1_0tmoe"]
[ext_resource type="PackedScene" uid="uid://cfn8ki3v0cnec" path="res://UI/bg.tscn" id="2_qajen"]

[node name="main" type="Node2D"]
script = ExtResource("1_0tmoe")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="BG" parent="CanvasLayer" instance=ExtResource("2_qajen")]

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MarginContainer"]
layout_mode = 2

[node name="Title Label Container" type="MarginContainer" parent="CanvasLayer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_top = 80

[node name="Title Label" type="Label" parent="CanvasLayer/MarginContainer/VBoxContainer/Title Label Container"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Game"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Continue Container" type="MarginContainer" parent="CanvasLayer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 300
theme_override_constants/margin_top = 60
theme_override_constants/margin_right = 300
theme_override_constants/margin_bottom = 60

[node name="Continue Button" type="Button" parent="CanvasLayer/MarginContainer/VBoxContainer/Continue Container"]
layout_mode = 2
text = "Continue"

[node name="New Game Button Container" type="MarginContainer" parent="CanvasLayer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 300
theme_override_constants/margin_top = 60
theme_override_constants/margin_right = 300
theme_override_constants/margin_bottom = 60

[node name="New Game Button" type="Button" parent="CanvasLayer/MarginContainer/VBoxContainer/New Game Button Container"]
layout_mode = 2
text = "New Game"

[node name="Quit Button Container" type="MarginContainer" parent="CanvasLayer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 300
theme_override_constants/margin_top = 60
theme_override_constants/margin_right = 300
theme_override_constants/margin_bottom = 60

[node name="Quit Button" type="Button" parent="CanvasLayer/MarginContainer/VBoxContainer/Quit Button Container"]
layout_mode = 2
text = "Quit"

[connection signal="pressed" from="CanvasLayer/MarginContainer/VBoxContainer/Continue Container/Continue Button" to="." method="_on_continue_button_pressed"]
[connection signal="pressed" from="CanvasLayer/MarginContainer/VBoxContainer/New Game Button Container/New Game Button" to="." method="_on_new_game_button_pressed"]
[connection signal="pressed" from="CanvasLayer/MarginContainer/VBoxContainer/Quit Button Container/Quit Button" to="." method="_on_quit_button_pressed"]
